--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,5 +36,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist/
+          folder: app/dist/
           clean: true  # Set to true if you want to remove old files
