add correct root url

--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "scripts": {
       "start": "vite --open",
       "start-local": "vite --config ../../vite.config.local.mjs",
-      "build": "vite build"
+      "build": "vite build",
+      "build-gh": "vite build --config vite.config"
     },
     "dependencies": {
       "@types/react": "^18.0.0",
