--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd app
           npm install
-          npm run build
+          npm run build-gh
           cp ../data.json dist/assets/data.json
       - name: gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
