--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -32,7 +32,7 @@ jobs:
           cd app
           npm install
           npm run build-gh
-          cp ../data.json dist/assets/data.json
+          cp ../data.json dist/data.json
       - name: gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
