--- a/app/package.json
+++ b/app/package.json
@@ -4,23 +4,24 @@
     "private": true,
     "license": "MIT",
     "scripts": {
-      "start": "vite --open",
-      "start-local": "vite --config ../../vite.config.local.mjs",
-      "build": "vite build",
-      "build-gh": "vite build --config vite.config.js"
+        "start": "vite --open",
+        "start-local": "vite --config ../../vite.config.local.mjs",
+        "build": "vite build",
+        "build-gh": "vite build --config vite.config.js"
     },
     "dependencies": {
-      "@types/react": "^18.0.0",
-      "@types/react-dom": "^18.0.0",
-      "deck.gl": "^9.1.0",
-      "maplibre-gl": "^5.0.0",
-      "popmotion": "^11.0.0",
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0",
-      "react-map-gl": "^8.0.0"
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "deck.gl": "^9.1.0",
+        "maplibre-gl": "^5.0.0",
+        "popmotion": "^11.0.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-map-gl": "^8.0.0"
     },
     "devDependencies": {
-      "typescript": "^4.6.0",
-      "vite": "^4.0.0"
+        "sass": "^1.86.3",
+        "typescript": "^4.6.0",
+        "vite": "^4.0.0"
     }
-  }
+}
