--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,19 @@
     "version": "0.0.0",
     "private": true,
     "license": "MIT",
+    "homepage": "https://thomzoy.github.io/bicycle/",
+    "type": "module",
     "scripts": {
         "start": "vite --open",
         "start-local": "vite --config ../../vite.config.local.mjs",
-        "build": "vite build",
-        "build-gh": "vite build --config vite.config.js"
+        "build": "vite build --config vite.config-local.js",
+        "build-gh": "vite build --config vite.config.js",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "deck.gl": "^9.1.0",
         "maplibre-gl": "^5.0.0",
         "popmotion": "^11.0.0",
@@ -20,6 +24,7 @@
         "react-map-gl": "^8.0.0"
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "sass": "^1.86.3",
         "typescript": "^4.6.0",
         "vite": "^4.0.0"
