--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   create:
-    # environment:
-    #   name: github-pages
-    #   url: ${{ steps.deployment.outputs.page_url }}
+    environment:
+      name: gh-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
 
     steps:
