--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,9 +8,6 @@ on:
 
 jobs:
   create:
-    environment:
-      name: gh-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
 
     steps:
@@ -38,13 +35,27 @@ jobs:
           npm install
           npm run build-gh
           cp ../data.json dist/data.json
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
+          name: production-files
           path: './app/dist'
+
+  deploy:
+    name: Deploy
+    needs: create
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
