--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -54,8 +54,9 @@ jobs:
           name: production-files
           path: ./dist
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: gh-pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          branch: gh-pages
+          folder: ./dist/
+          clean: true  # Set to true if you want to remove old files
