--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,7 +36,7 @@ jobs:
           npm run build-gh
           cp ../data.json dist/data.json
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           # Upload dist folder
           name: production-files
