--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -48,6 +48,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
