--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,6 +4,8 @@ permissions:
   pages: write
   id-token: write
 on:
+  schedule:
+   - cron: '0 3 * * *' # Midnight
   workflow_dispatch:
   push:
     branches:
